Add missing cargo.toml metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "cog"
 version = "0.1.0"
 authors = ["Paul d'Hubert <paul@tymate.com>"]
+homepage = "https://github.com/pauldub/cog-rust"
+repository = "https://github.com/pauldub/cog-rust"
+license = "MIT"
+desrcription = "Simple, opiniated library for building Cog commands in rust."
 
 [dependencies]
 rustc-serialize = "^0.3"
